# SWGL

./: .gitignore  CMakeLists.txt  README.md
gl_sc_swr/: BatchExport.cpp  CMakeLists.txt  DrawSpan.cpp  DrawSpan.h  HWAbstractionLayer.h  HWBlock.h  HWBlock16x1.cpp  HWBlock4x4.cpp  HWBlock8x2.cpp  HWBlockLine4x4.cpp  HWBlockLine4x4.h  HWBlockLine4x4Fixp.cpp  HWBlockLine4x4_SIMDPP.cpp  HWBlockLine8x2.cpp  HWBlockLine8x8.cpp  HWImplementationPureCpp.cpp  HWPureCpp.cpp  HWPureCpp.h  HWSSE1Impl.cpp  HWSSE1Impl.h  HW_ROP_CVEX.h  HW_ROP_SIMDPP.h  HW_VROP.h  HW_VROP_FIXP.h  ITriangleRasterizer.h  LiteMath.h  PureCpp.cpp  PureCpp.h  PureCppBlock.h  PureCppBlock2x2.cpp  PureCppBlock2x2.h  PureCppBlock4x4.cpp  PureCppBlock4x4.h  RasterAlgorithms.cpp  RasterAlgorithms.h  RasterOperations.h  SSE1Impl.cpp  SSE1Impl.h  SWGL_TiledFrameBuffer.cpp  SWGL_TiledFrameBuffer.h  (+52 more)
main_app/: CMakeLists.txt  HydraExport.cpp  HydraExport.h  main_app.cpp  main_app.vcxproj  main_app.vcxproj.filters  main_app_2013.sln  main_linux.cpp  main_win.cpp  stdout.txt  tests_sc1.cpp  tests_sc1.cpp.orig  tests_sc1.h  tests_sc2.cpp
main_app/data/: cat.vsgf  teapot.vsgf  teapot2.vsgf
z_compare_prog/: main.cpp  z_compare_prog.sln  z_compare_prog.vcxproj  z_compare_prog_2013.sln  z_compare_prog_2013.vcxproj
